update profile info and remove experiences section

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 					<div class="introduction col-sm-8 col-xs-12 wow fadeInDown" data-wow-duration="1.5s" data-wow-offset="200" data-wow-delay="0.5s">
 						<h2 class="h2">Abhishek Singh</h2>
 						<p class="introduce">Graduate Student</p>
-						<p class="intro">I am a big admirer of all scientific disciplines. Among all domains of science, I have a predilection towards Computer Science and Mathematics. In computer science, I started with doing some interesting projects and internships in Systems and Security and eventually switched to Machine Learning almost two years ago. Lately, I have been actively doing research in Meta-learning and AutoML. Apart from Computer Science, I also try to study Quantum physics and String theory in my free time. I am also a strong advocate of environmental and social movements. My days are mostly packed with tasks and deadlines but I try to take out some time for meditation and physical exercise. Occasionally, I also take out some time for enjoying thrill-packed movies, learning musical instruments and useless political debates.</p>
+						<p class="intro">I am a big admirer of all scientific disciplines. Among all domains of science, I have a predilection towards Computer Science and Mathematics and that is what I am pursuing right now at the MIT Media Lab. In Computer Science, I had started with doing some interesting projects and internships in Systems and Security and eventually switched to Machine Learning almost three years ago. Right now I am studying and doing research in various aspects of Decentralized AI, this includes Distributed Machine Learning and Privacy Preserving Machine Learning. Before joining MIT, I did my undergraduate study in CS at IIIT Sri City and worked as an intern at a research group in Cisco where I worked on AutoML, Systems, Deep Learning and Security, and Open source contribution in SysML. Apart from Computer Science, I also want to develop a decent level of understanding in all other scientific fields. I am also a strong advocate of environmental and social impact. My days are mostly packed with tasks and deadlines but I try to take out some time for meditation and physical exercise. Occasionally, I also take out time for enjoying thrill-packed movies, learning musical instruments and useless political debates.</p>
 					</div>
 				</div>
 				<div class="row">
@@ -126,7 +126,7 @@
 							</div>
 							<div class="acc-item">
 								<div class="acc-title"><i class="ion-android-navigate"></i> What are my hobbies</div>
-								<div class="acc-content">I have lots and lots of hobbies and the list has been growing even faster than the hype in AI. Recently I have started boarding on the quest of understanding Conciousness. Much of my hobbies are related to Music; ranging from vocals to various instruments. I am trained in Hindustani classical music but have grown rusty since a long time. Currently, I can play Guitar, Synthesizer, harmonium, bit of hand tapping, bongo and started learning violin recently. Going on excursions, tours and trekking with friends and family is another hobby of mine. I also enjoy reading about History, Physics, Politics and Psychology.</div>
+								<div class="acc-content">I have lots and lots of hobbies and the list has been growing even faster than the hype in AI. Recently I have started boarding on the quest of understanding Conciousness. Much of my hobbies are related to Music; ranging from vocals to various instruments. I am trained in Hindustani classical music but have grown rusty since a long time. Currently, I can play Guitar, Synthesizer, harmonium, bit of hand tapping, bongo and started learning violin recently. Going on excursions, tours, skiing and trekking with friends and family is another cluster of my hobby. I also enjoy reading about History, Physics, Biology, Politics and Psychology (to be honest I enjoy reading everything, not just these five).</div>
 							</div>
 						</div>
 					</div>
@@ -287,173 +287,6 @@
 		</div>
 		<!-- End Portfolio Section -->
 
-		<!-- Start Experience Section -->
-		<div class="experiences center" id="experiences">
-			<div class="container">
-				<div class="title wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">
-					<h2 class="h2">work experiences</h2>
-					<p class="main-para">Overall timeline of work in chronological order.</p>
-				</div>
-				<div class="timeline wow fadeIn" data-wow-duration="1s" data-wow-offset="200">
-
-					<div class="timeline-block clearfix wow fadeInRight" data-wow-duration="1s" data-wow-offset="200">
-						<div class="icon">
-							<i class="ion-university"></i>
-						</div>
-						<div class="content right round-corners">
-							<h3>IIIT Sri City</h3>
-							<span class="duration">( Aug. 2014 : Present )</span>
-							<span class="job-title"> Undergraduate</span>
-							<p>I am pursuing B.Tech course in Computer Science and Engineering. Majority of the courses here are oriented towards Computer science, Electronics and Mathematics. As per the degree requirement, I also get to study various interesting and exciting courses like Communication skills, Economics, Humanities and much more. Life is on a roller coaster here. Nevertheless, It has been a very satisfactory and rewarding journey for me so far.</p>
-						</div>
-					</div>
-
-					<div class="timeline-block clearfix wow fadeInLeft" data-wow-duration="1s" data-wow-offset="200">
-						<div class="icon">
-							<i class="ion-cube"></i>
-						</div>
-						<div class="content left round-corners">
-							<h3>IIITH and Rekall Softwares</h3>
-							<span class="duration">( May 2015 : July. 2015 )</span>
-							<span class="job-title"> Network and Server Management</span>
-							<p>This 3 month training programme was focused on virtualization technologies and automation of system administration tasks. Hands on experience at techsupport labs of IIIT Hyderabad on how to automate server management tasks for a cluster of hundreds of servers. This program was jointly organized by IIIT Hyderabad and Rekall Softwares</p>
-						</div>
-					</div>
-
-					<div class="timeline-block clearfix wow fadeInRight" data-wow-duration="1s" data-wow-offset="200">
-						<div class="icon">
-							<i class="ion-star"></i>
-						</div>
-						<div class="content right round-corners">
-							<h3>IIIT Sri City</h3>
-							<span class="duration">( April 2015 : May 2017 )</span>
-							<span class="job-title"> System and Network Assistant</span>
-							<p>A very selective and prestigious position for student with knowledge of systems and networking. The position is equivalent of teaching assistant and stipend is also the same. Assisted professors and course TAs in setting up IT infrastructure for their courses likeMoodle, Online Judge, Programming labs and etc. Managed servers which includes important university resources like authentication system,data backup and storage.</p>
-						</div>
-					</div>
-
-					<div class="timeline-block clearfix wow fadeInRight" data-wow-duration="1s" data-wow-offset="200">
-						<div class="icon">
-							<i class="ion-star"></i>
-						</div>
-						<div class="content left round-corners">
-							<h3>Google Summer of Code</h3>
-							<span class="duration">( April 2016 : Aug 2016 )</span>
-							<span class="job-title"> Feature creeping and Bug hunting for Nmap</span>
-							<p>Worked with Nmap community for a project sponsored by Google Summer of Code. I fixed some of the major bugs in Nmap's codebase around memory leaks and asynchronous multi-threading. Major contribution came in the form of new features. Features like TCP Fallback for Nmap's DNS engine, Zero byte connection for Ncat(requested by Red-hat community), support for scanning decoys in IPv6, authored script for RFCs compliant DNSSEC configuration verification of DNS servers.</p>
-						</div>
-					</div>
-
-					<div class="timeline-block clearfix wow fadeInRight" data-wow-duration="1s" data-wow-offset="200">
-						<div class="icon">
-							<i class="ion-star"></i>
-						</div>
-						<div class="content right round-corners">
-							<h3>National Security Database</h3>
-							<span class="duration">( 11 July 2016 : 13 July 2016 )</span>
-							<span class="job-title"> Penetration Testing Program </span>
-							<p>This program was organized by Information Sharing and Analysis Center. Hands onexperience was given over vulnerable systems. I passed the certification exam for entry into the National Security Database</p>
-						</div>
-					</div>
-
-					<div class="timeline-block clearfix wow fadeInRight" data-wow-duration="1s" data-wow-offset="200">
-						<div class="icon">
-							<i class="ion-star"></i>
-						</div>
-						<div class="content left round-corners">
-							<h3>Summer school VIT Vellore</h3>
-							<span class="duration">( May 2017 : June 2017 )</span>
-							<span class="job-title"> Summer School on Information and System Security by ACM India</span>
-							<p>Attended Summer school on Information and Systems Security organized by ACM. Fromthe list of 272 applicants across India, 45 students from different Universities were selected. Prominent researchers from all over the world took sessions on cutting edge researchproblems in the field of Information Security. Developed a malware detection system which maps a malware sample of arbitrary lengthto fixed size image using Bi-LSTMs and feed it to CNN which performs final classification. </p>
-						</div>
-					</div>
-
-					<div class="timeline-block clearfix wow fadeInRight" data-wow-duration="1s" data-wow-offset="200">
-						<div class="icon">
-							<i class="ion-star"></i>
-						</div>
-						<div class="content right round-corners">
-							<h3>Cisco</h3>
-							<span class="duration">( August 2017 : July 2018 )</span>
-							<span class="job-title"> Cisco International Internship Program</span>
-							<p>Participated in a one year program by Cisco. Worked with a research team on differentproblems around AI, Cloud Infrastructure and Security.<br>
-							<ul>
-								<font color='#fff'>
-								<li> Released open source AutoML framework, AMLA. Accompanying paper accepted with demo in the <b>AutoML workshop at ICML, 2018</b>.</li>
-								<li> Worked on a Neural Architecture Construction method to design neural network architectures efficiently. <b>Patented by Cisco</b>.</li>
-								<li> Contributer to <b>MLPerf</b>. Provided PyTorch support for Translation workload(Transfomer model). Work with submitter working group for workloads.</li>
-								<li> Deep learning based light weight Malware Detection for cloud infrastructure. <b>Patented by Cisco</b>.</li>
-								<li> Malware data augmentation using generative adversarial networks. Presented the work at <b>Cisco Annual Data Science Summit 2018</b>, Prague, Czech Republic.</li>
-								<li> Worked on Cisco products such as Logs/Metrics analysis engine and machine learning pipeline infrastructure.</li>
-							</font>
-							</ul>
-							</p>
-						</div>
-					</div>
-
-					<div class="timeline-block clearfix wow fadeInRight" data-wow-duration="1s" data-wow-offset="200">
-						<div class="icon">
-							<i class="ion-star"></i>
-						</div>
-						<div class="content left round-corners">
-							<h3>Cisco</h3>
-							<span class="duration">( Aug 2018 : July 2019 )</span>
-							<span class="job-title"> Research Internship</span>
-							<p> This is a remote internship for the continuation of research efforts in CPSG-AI group of Cisco.
-							<ul>
-								<font color='#fff'>
-								<li>
-									Fast Neural Architecture Construction using EnvelopeNets: A neural architecture designmethod based on theories of human brain ontogenesis.
-								</li>
-								<li>
-									MI-GAN: Malware Image synthesis using GANs by using multiple tasks for Generator. Accompanying paper accepted in <b>AAAI student abstract, 2019.</b>
-								</li>
-								<li>
-                  Interpretability of AutoML systems: We devise statistical method to interpret decisionsof black box AutoML. Accompanying paper sent to AAAI AI and Ethics main track.
-								</li>
-								<li>
-									Budgeted Neural architecture search: System to discover/design neural network architec-tures which adapts to resource and time available. <b>Patented by Cisco.</b>
-								</li>
-								<li>
-									Knowledge extraction in Neural Architecture Search: System and Method to extract andreuse knowledge for neural architecture search. <b>Patented by Cisco.</b>
-								</li>
-								</font>
-							</ul>
-							</p>
-						</div>
-					</div>
-
-					<div class="timeline-block clearfix wow fadeInRight" data-wow-duration="1s" data-wow-offset="200">
-						<div class="icon">
-							<i class="ion-star"></i>
-						</div>
-						<div class="content left round-corners">
-							<h3>MIT Media Labs</h3>
-							<span class="duration">( September 2019 : Present )</span>
-							<span class="job-title"> Graduate Student</span>
-							<p> Joined as a graduate student in the Camera Culture group.
-							<ul>
-								<font color='#fff'>
-								<li>
-									Working on Privacy preserving machine learning method called Split learning.
-								</li>
-								<li>
-									Working on AI for healthcare.
-								</li>
-								<li>
-									Data driven methods for Imaging.
-								</li>
-								</font>
-							</ul>
-							</p>
-						</div>
-					</div>
-
-				</div>
-			</div>
-		</div>
-
-		<!-- End Experience Section -->
 		<!-- Start Contact Section -->
 		<div class="contact center" id="contact-me">
 			<div class="container">
