--- a/index.html
+++ b/index.html
@@ -498,8 +498,8 @@
 		<script src='https://d33wubrfki0l68.cloudfront.net/js/645cf2b92ed5eff7b48ce798d5448736aa5f470f/assets/javascripts/bootstrap.min.js'></script>
 
 
-		<!-- NiceScroll plugin from : https://areaaperta.com/nicescroll/ -->
-		<script src='https://d33wubrfki0l68.cloudfront.net/js/c8dcc707877337dd345648dea5f60530d9cd5320/js/jquery.nicescroll.min.js'></script>
+		<!-- NiceScroll plugin from : https://areaaperta.com/nicescroll/ 
+		<script src='https://d33wubrfki0l68.cloudfront.net/js/c8dcc707877337dd345648dea5f60530d9cd5320/js/jquery.nicescroll.min.js'></script>-->
 
 		<!-- mixitup plugin from : https://mixitup.kunkalabs.com/ -->
 		<script src='https://d33wubrfki0l68.cloudfront.net/js/6a9266bf149dac5a12d1e4e63c485713f0d198bc/assets/js/jquery.mixitup.min.js'></script>
@@ -509,8 +509,6 @@
 
 		<!-- magnific popup js file -->
 		<script src='https://d33wubrfki0l68.cloudfront.net/js/b6225b4dcaf79d53f98ccc1985232d994768f7a1/js/magnific-popup.js'></script>
-		<!-- form validation file from: https://reactiveraven.github.io/jqBootstrapValidation/ -->
-		<script src='https://d33wubrfki0l68.cloudfront.net/js/b3ab67306c2568636179f4eb4a9439a3e266605a/js/jqbootstrapvalidation.js'></script>
 		<!-- Owl carousel js file
 		    from : https://www.owlcarousel.owlgraphic.com/index.html -->
 		<script src='https://d33wubrfki0l68.cloudfront.net/js/bff1fd830c8b43345ef2a1c1b6512b85ea8251fe/js/owl.carousel.min.js'></script>
