update publication list

--- a/index.html
+++ b/index.html
@@ -118,7 +118,10 @@
 							</div>
 							<div class="acc-item">
 								<div class="acc-title"><i class="ion-android-navigate"></i> What is my research?</div>
-								<div class="acc-content">Can we build a predictor for climate change if weuse smartphone data from every individual on the planet? Can we prevent the next pandemic if every individual share their health data with healthcare providers? Can we design the drugs for various diseases at a 100x faster rate if all pharma companies share their data with each other? Today, we do not dare to ask such questions because it requires collaboration and trust between untrusted parties. The goal of my research is to enable a data driven ecosystem where individuals and organizations do not have to trust each other for collaboration. To accomplish this I am designing data sharing and machine learning algorithms that try to reduce or eliminate the dichotomy between privacy and utility. A majority of the data exists in silos due to privacy, trust and other reasons. Some of the algorithms I aim to develop will unlock these silos and can advance the progress in many scientific and societal endeavors. It could potentially allow us to answer the questions we are not even thinking about right now.</div>
+								<div class="acc-content">Can we build a model for global warming if we use smartphone data from every individual on the planet? Can we prevent the next pandemic if every individual share their health data with healthcare providers? Can we design the drugs for various diseases at a 100x faster rate if all pharma companies share their data with each other?
+									Today, we do not dare to ask such questions because it requires collaboration and trust between untrusted parties. The goal of my research is to enable a data driven ecosystem where individuals and organizations do not have to trust each other for collaboration.
+									To accomplish this I am designing data sharing and machine learning algorithms that try to reduce or eliminate the dichotomy between privacy and utility.
+									A majority of the data exists in silos due to privacy, trust and other reasons. Some of the algorithms I aim to develop will unlock these silos and can advance the progress in many scientific and societal endeavors. It could potentially allow us to answer the questions we are not even thinking about right now.</div>
 							</div>
 							<div class="acc-item">
 								<div class="acc-title"><i class="ion-android-navigate"></i> How can you contact me?</div>
@@ -139,7 +142,10 @@
 					<p class="main-para">This is a selected set of recent publications/preprints. For a full list visit my <a href="https://scholar.google.co.in/citations?user=3QygpzAAAAAJ&hl=en"><font color="black"><u>Google Scholar</u></font></a></p><br>
 					<p class="main-para">
 						<ul class="list-group" id="custom1">
-							<li class="list-group-item list-group-item-success"><a href="https://www.researchgate.net/publication/356732544_NoPeek-Infer_Preventing_face_reconstruction_attacks_in_distributed_inference_after_on-premise_training"><u>FG 2021</u>, NoPeek-Infer: Preventing face reconstruction attacks in distributed inference after on-premise training. <u>Oral</u></a></li>
+							<li class="list-group-item list-group-item-warning"><a href="https://download.huan-zhang.com/events/wfvml2022/papers/8_CameraReady_posthoc_privacy_icml_workshop.pdf"><u>ICML 2022 Formal Verification Workshop</u>, Formal Privacy Guarantees for Neural Network queries by estimating local Lipschitz constant</a></li>
+							<li class="list-group-item list-group-item-success"><a href="https://arxiv.org/abs/2203.12192"><u>ECCV 2022</u>, Decouple-and-Sample: Protecting sensitive information in task agnostic data release</a></li>
+							<li class="list-group-item list-group-item-success"><a href="https://arxiv.org/abs/2203.12192"><u>ECCV 2022</u>, Learning to Censor by Noisy Sampling</a></li>
+							<li class="list-group-item list-group-item-success"><a href="https://www.researchgate.net/publication/356732544_NoPeek-Infer_Preventing_face_reconstruction_attacks_in_distributed_inference_after_on-premise_training"><u>FG 2021</u>, NoPeek-Infer: Preventing face reconstruction attacks in distributed inference after on-premise training. <u>Oral (Runner up best paper award)</u></a></li>
 							<li class="list-group-item list-group-item-success"><a href="https://openaccess.thecvf.com/content/CVPR2021/html/Singh_DISCO_Dynamic_and_Invariant_Sensitive_Channel_Obfuscation_for_Deep_Neural_CVPR_2021_paper.html"><u>CVPR 2021</u>, DISCO: Dynamic and Invariant Sensitive Channel Obfuscation for deep neural networks</a></li>
 							<li class="list-group-item list-group-item-warning"><a href="https://arxiv.org/abs/2110.01406">(Under Submission) MedPerf: Open Benchmarking Platform for Medical Artificial Intelligence using Federated Evaluation</a></li>
 							<li class="list-group-item list-group-item-warning"><a href="https://openreview.net/pdf?id=YaFryEazZWA">(Under Submission) Reconstruction benchmark for obfuscated representations</a></li>
@@ -147,13 +153,8 @@
 							<li class="list-group-item list-group-item-success"><a href="https://www.bmj.com/content/373/bmj.n1087"><u>BMJ</u> Public health impact of delaying second dose of BNT162b2 or mRNA-1273 covid-19 vaccine: simulation agent based modeling study</a></li>
 							<li class="list-group-item list-group-item-info"><a href="https://arxiv.org/abs/2103.01754"><u>ArXiv</u> Safepaths: Vaccine Diary Protocol and Decentralized Vaccine Coordination System using a Privacy Preserving User Centric Experience</a></li>
 							<li class="list-group-item list-group-item-info"><a href="https://arxiv.org/abs/2012.02885"><u>ArXiv</u> Verifiable Proof of Health using Public Key Cryptography</a></li>
-							<li class="list-group-item list-group-item-info"><a href=""><u>ArXiv</u> PPContactTracing: A Privacy-Preserving Contact Tracing Protocol for COVID-19 Pandemic</a></li>
-							<li class="list-group-item list-group-item-info"><a href="https://arxiv.org/abs/2008.04137"><u>ArXiv</u> SplitNN-driven Vertical Partitioning</a></li>
 							<li class="list-group-item list-group-item-success"><a href="https://arxiv.org/abs/2007.13518"><u>NeurIPS FedML Workshop</u> Fedml: A research library and benchmark for federated machine learning. <u>Best Paper Award@NeurIPS FedML Workshop</a></u></li>
-							<li class="list-group-item list-group-item-info"><a href="https://arxiv.org/abs/2004.12254"><u>ArXiv</u> Privacy in deep learning: A survey</a></li>
-							<li class="list-group-item list-group-item-info"><a href="https://arxiv.org/abs/2007.02317"><u>ArXiv</u> Adding Location and Global context to the Google/Apple Exposure Notification Bluetooth API</a></li>
 							<li class="list-group-item list-group-item-success"><a href="https://virtual.2020.emnlp.org/paper_WS-12.6.html"><u>EMNLP 2020, Clinical NLP</u> Clinical XLNet: Modeling Sequential Clinical Notes and Predicting Prolonged Mechanical Ventilation</a></li>
-							<li class="list-group-item list-group-item-info"><a href="https://arxiv.org/abs/2003.08567"><u>ArXiv</u> Apps gone rogue: Maintaining personal privacy in an epidemic</a></li>
 						</ul>
 					</p>
 				</div>
