--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
 						<i class="ion-android-home center"></i>
 						<div class="info-content">
 							<h3>Visit me</h3>
-							<span>Camera Culture, MIT Media Labs</span><span>US</span>
+							<span>Camera Culture, MIT Media Lab</span><span>US</span>
 						</div>
 					</div>
 					<div class="col-md-3 col-sm-6 col-xs-12 info wow fadeInLeft" data-wow-duration="1s" data-wow-offset="200">
