--- a/index.html
+++ b/index.html
@@ -256,7 +256,8 @@
 		</div>
 		<!-- Finish the Blog Section -->
 
-		<!-- Start Portfolio Section -->
+		<!-- Start Portfolio Section 
+
 		<div class="portfolio center" id="portfolio">
 			<div class="container">
 				<div class="wow fadeInDown" data-wow-duration="1s" data-wow-offset="200">
@@ -267,13 +268,144 @@
 				<div class="controls wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">
 					<button class="filter round-corners" data-filter="all" data-content="All">All</button>
 					<button class="filter round-corners" data-filter=".privacy" data-content="Privacy">Privacy</button>
-					<button class="filter round-corners" data-filter=".imaging" data-content="Imaging">Imaging</button>
-					<button class="filter round-corners" data-filter=".health" data-content="Healthcare">Healthcare</button>
-					<button class="filter round-corners" data-filter=".automl" data-content="AutoML">AutoML</button>
-					<button class="filter round-corners" data-filter=".sysml" data-content="SysML">SystemsML</button>
-					<button class="filter round-corners" data-filter=".patents" data-content="Patents">Patents</button>
+					<button class="filter round-corners" data-filter=".privacy" data-content="Privacy">Distributed ML</button>
+					<button class="filter round-corners" data-filter=".privacy" data-content="Privacy">Health</button>
+					<button class="filter round-corners" data-filter=".automl" data-content="Privacy">AutoML</button>
 				</div>
 				<div id="Container" class="wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">
+
+					<div class="mix research privacy col-md-3 col-sm-6 col-xs-6" data-my-order="6">
+				    	<div class="img-wrapper overlay-slide-right center">
+					    	<img src="img/fnac.png" class="center-block img-responsive" alt="">
+					    	<div class="overlay-content">
+					    		<span>Private Inference</span>
+					    		<a href="#test-popup-1" class="open-popup-link">
+					    			<i class="ion-android-expand"></i>
+					    		</a>
+
+					    		<div id="test-popup-1" class="white-popup mfp-hide">
+					    			<h3>Fast Neural Architecture Construction</h3>
+										<h5>Accepted at <a href="http://metalearning.ml/2018/"><font color="#051B4D">NIPS Meta-learning Workshop</font></a>, Full paper <a href="https://arxiv.org/abs/1803.06744"><font color="#051B4D">link</font></a>, related idea's patent pending with US office</h5>
+					    			<img src="img/fnac.png" class="center-block img-responsive" alt="project">
+										<p>Fast Neural Architecture Construction is a method to construct deep network architectures by pruning and expansion of a base network. The construction method is, conceivably, analogous to theories of human brain ontogenesis. Instead of constructing a network architecture based on validation accuracy, a single scalar, our method directly compares utility of different network blocks and constructs networks with close to state of the art accuracy, in &lt; 1 GPU day, faster than most of the current neural architecture search methods.</p>
+					    		</div>
+					    	</div>
+					    </div>
+				    </div>
+
+					<div class="mix research privacy col-md-3 col-sm-6 col-xs-6" data-my-order="6">
+				    	<div class="img-wrapper overlay-slide-right center">
+					    	<img src="img/fnac.png" class="center-block img-responsive" alt="">
+					    	<div class="overlay-content">
+					    		<span>Split Learning</span>
+					    		<a href="#test-popup-1" class="open-popup-link">
+					    			<i class="ion-android-expand"></i>
+					    		</a>
+
+					    		<div id="test-popup-1" class="white-popup mfp-hide">
+					    			<h3>Fast Neural Architecture Construction</h3>
+										<h5>Accepted at <a href="http://metalearning.ml/2018/"><font color="#051B4D">NIPS Meta-learning Workshop</font></a>, Full paper <a href="https://arxiv.org/abs/1803.06744"><font color="#051B4D">link</font></a>, related idea's patent pending with US office</h5>
+					    			<img src="img/fnac.png" class="center-block img-responsive" alt="project">
+										<p>Fast Neural Architecture Construction is a method to construct deep network architectures by pruning and expansion of a base network. The construction method is, conceivably, analogous to theories of human brain ontogenesis. Instead of constructing a network architecture based on validation accuracy, a single scalar, our method directly compares utility of different network blocks and constructs networks with close to state of the art accuracy, in &lt; 1 GPU day, faster than most of the current neural architecture search methods.</p>
+					    		</div>
+					    	</div>
+					    </div>
+				    </div>
+
+					<div class="mix research privacy col-md-3 col-sm-6 col-xs-6" data-my-order="6">
+				    	<div class="img-wrapper overlay-slide-right center">
+					    	<img src="img/fnac.png" class="center-block img-responsive" alt="">
+					    	<div class="overlay-content">
+					    		<span>Synthetic Data Relase</span>
+					    		<a href="#test-popup-1" class="open-popup-link">
+					    			<i class="ion-android-expand"></i>
+					    		</a>
+
+					    		<div id="test-popup-1" class="white-popup mfp-hide">
+					    			<h3>Fast Neural Architecture Construction</h3>
+										<h5>Accepted at <a href="http://metalearning.ml/2018/"><font color="#051B4D">NIPS Meta-learning Workshop</font></a>, Full paper <a href="https://arxiv.org/abs/1803.06744"><font color="#051B4D">link</font></a>, related idea's patent pending with US office</h5>
+					    			<img src="img/fnac.png" class="center-block img-responsive" alt="project">
+										<p>Fast Neural Architecture Construction is a method to construct deep network architectures by pruning and expansion of a base network. The construction method is, conceivably, analogous to theories of human brain ontogenesis. Instead of constructing a network architecture based on validation accuracy, a single scalar, our method directly compares utility of different network blocks and constructs networks with close to state of the art accuracy, in &lt; 1 GPU day, faster than most of the current neural architecture search methods.</p>
+					    		</div>
+					    	</div>
+					    </div>
+				    </div>
+
+					<div class="mix research privacy col-md-3 col-sm-6 col-xs-6" data-my-order="6">
+				    	<div class="img-wrapper overlay-slide-right center">
+					    	<img src="img/fnac.png" class="center-block img-responsive" alt="">
+					    	<div class="overlay-content">
+					    		<span>Contact Tracing</span>
+					    		<a href="#test-popup-1" class="open-popup-link">
+					    			<i class="ion-android-expand"></i>
+					    		</a>
+
+					    		<div id="test-popup-1" class="white-popup mfp-hide">
+					    			<h3>Fast Neural Architecture Construction</h3>
+										<h5>Accepted at <a href="http://metalearning.ml/2018/"><font color="#051B4D">NIPS Meta-learning Workshop</font></a>, Full paper <a href="https://arxiv.org/abs/1803.06744"><font color="#051B4D">link</font></a>, related idea's patent pending with US office</h5>
+					    			<img src="img/fnac.png" class="center-block img-responsive" alt="project">
+										<p>Fast Neural Architecture Construction is a method to construct deep network architectures by pruning and expansion of a base network. The construction method is, conceivably, analogous to theories of human brain ontogenesis. Instead of constructing a network architecture based on validation accuracy, a single scalar, our method directly compares utility of different network blocks and constructs networks with close to state of the art accuracy, in &lt; 1 GPU day, faster than most of the current neural architecture search methods.</p>
+					    		</div>
+					    	</div>
+					    </div>
+				    </div>
+
+					<div class="mix research privacy col-md-3 col-sm-6 col-xs-6" data-my-order="6">
+				    	<div class="img-wrapper overlay-slide-right center">
+					    	<img src="img/fnac.png" class="center-block img-responsive" alt="">
+					    	<div class="overlay-content">
+					    		<span></span>
+					    		<a href="#test-popup-1" class="open-popup-link">
+					    			<i class="ion-android-expand"></i>
+					    		</a>
+
+					    		<div id="test-popup-1" class="white-popup mfp-hide">
+					    			<h3>Fast Neural Architecture Construction</h3>
+										<h5>Accepted at <a href="http://metalearning.ml/2018/"><font color="#051B4D">NIPS Meta-learning Workshop</font></a>, Full paper <a href="https://arxiv.org/abs/1803.06744"><font color="#051B4D">link</font></a>, related idea's patent pending with US office</h5>
+					    			<img src="img/fnac.png" class="center-block img-responsive" alt="project">
+										<p>Fast Neural Architecture Construction is a method to construct deep network architectures by pruning and expansion of a base network. The construction method is, conceivably, analogous to theories of human brain ontogenesis. Instead of constructing a network architecture based on validation accuracy, a single scalar, our method directly compares utility of different network blocks and constructs networks with close to state of the art accuracy, in &lt; 1 GPU day, faster than most of the current neural architecture search methods.</p>
+					    		</div>
+					    	</div>
+					    </div>
+				    </div>
+
+					<div class="mix research privacy col-md-3 col-sm-6 col-xs-6" data-my-order="6">
+				    	<div class="img-wrapper overlay-slide-right center">
+					    	<img src="img/fnac.png" class="center-block img-responsive" alt="">
+					    	<div class="overlay-content">
+					    		<span></span>
+					    		<a href="#test-popup-1" class="open-popup-link">
+					    			<i class="ion-android-expand"></i>
+					    		</a>
+
+					    		<div id="test-popup-1" class="white-popup mfp-hide">
+					    			<h3>Fast Neural Architecture Construction</h3>
+										<h5>Accepted at <a href="http://metalearning.ml/2018/"><font color="#051B4D">NIPS Meta-learning Workshop</font></a>, Full paper <a href="https://arxiv.org/abs/1803.06744"><font color="#051B4D">link</font></a>, related idea's patent pending with US office</h5>
+					    			<img src="img/fnac.png" class="center-block img-responsive" alt="project">
+										<p>Fast Neural Architecture Construction is a method to construct deep network architectures by pruning and expansion of a base network. The construction method is, conceivably, analogous to theories of human brain ontogenesis. Instead of constructing a network architecture based on validation accuracy, a single scalar, our method directly compares utility of different network blocks and constructs networks with close to state of the art accuracy, in &lt; 1 GPU day, faster than most of the current neural architecture search methods.</p>
+					    		</div>
+					    	</div>
+					    </div>
+				    </div>
+
+					<div class="mix research privacy col-md-3 col-sm-6 col-xs-6" data-my-order="6">
+				    	<div class="img-wrapper overlay-slide-right center">
+					    	<img src="img/fnac.png" class="center-block img-responsive" alt="">
+					    	<div class="overlay-content">
+					    		<span></span>
+					    		<a href="#test-popup-1" class="open-popup-link">
+					    			<i class="ion-android-expand"></i>
+					    		</a>
+
+					    		<div id="test-popup-1" class="white-popup mfp-hide">
+					    			<h3>Fast Neural Architecture Construction</h3>
+										<h5>Accepted at <a href="http://metalearning.ml/2018/"><font color="#051B4D">NIPS Meta-learning Workshop</font></a>, Full paper <a href="https://arxiv.org/abs/1803.06744"><font color="#051B4D">link</font></a>, related idea's patent pending with US office</h5>
+					    			<img src="img/fnac.png" class="center-block img-responsive" alt="project">
+										<p>Fast Neural Architecture Construction is a method to construct deep network architectures by pruning and expansion of a base network. The construction method is, conceivably, analogous to theories of human brain ontogenesis. Instead of constructing a network architecture based on validation accuracy, a single scalar, our method directly compares utility of different network blocks and constructs networks with close to state of the art accuracy, in &lt; 1 GPU day, faster than most of the current neural architecture search methods.</p>
+					    		</div>
+					    	</div>
+					    </div>
+				    </div>
 
 					<div class="mix research patents automl col-md-3 col-sm-6 col-xs-6" data-my-order="6">
 				    	<div class="img-wrapper overlay-slide-right center">
@@ -410,7 +542,8 @@
 				</div>
 			</div>
 		</div>
-		<!-- End Portfolio Section -->
+
+		 End Portfolio Section -->
 
 		<!-- Start Contact Section -->
 		<div class="contact center" id="contact-me">
