change bio a little bit

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	<body>
 
 		<!-- Start Loading page -->
-		<div class="loading">
+		<!-- <div class="loading">
 			<div class="loading-wrapper">
 				<div class="rec r1"></div>
 				<div class="rec r2"></div>
@@ -59,7 +59,7 @@
 				<div class="rec r4"></div>
 				<div class="rec r5"></div>
 			</div>
-		</div>
+		</div> -->
 		<!-- End Loading page -->
 
 		<!-- Start Header Section -->
@@ -82,7 +82,7 @@
 						<a href="#about-me" class="wow fadeIn" data-wow-duration="0.5s" data-wow-delay="1.5s">about me</a>
 						<a href="#my-work" class="wow fadeIn" data-wow-duration="0.5s" data-wow-delay="1.5s">my work</a>
 						<a href="#blogs" class="wow fadeIn" data-wow-duration="0.5s" data-wow-delay="1.5s">blogs</a>
-						<a href="#portfolio" class="wow fadeIn" data-wow-duration="0.5s" data-wow-delay="1.5s">portfolio</a>
+						<!-- <a href="#portfolio" class="wow fadeIn" data-wow-duration="0.5s" data-wow-delay="1.5s">portfolio</a> -->
 					</div>
 				</div>
 				<div class="mouse" id="mouse"></div>
@@ -99,7 +99,10 @@
 					</div>
 					<div class="introduction col-sm-8 col-xs-12 wow fadeInDown" data-wow-duration="1.5s" data-wow-offset="200" data-wow-delay="0.5s">
 						<h2 class="h2">Abhishek Singh</h2>
-						<p class="intro">I am a Ph.D. student at the MIT Media Lab. My current research interests include - Data Privacy (Both Statistical and Cryptographic techniques) and the intersection of Machine Learning, Simulations and Complex Systems.
+						<p class="intro">I am a Ph.D. student at the MIT Media Lab.
+							My research interests include - Distributed Machine Learning and Data Privacy (Both Statistical and Cryptographic techniques).
+							My current focus is on building Decentralized and Self-organizing Machine Learning.
+							You can find my CV <a href="CV.pdf" style="color:blue;"><u>here</u></a>
 					</div>
 				</div>
 				<div class="row">
@@ -194,7 +197,7 @@
 								<!-- Post Content -->
 								<p>An early sneak peek of what I am building</p>
 								<!-- Read More Button -->
-								<a href="#0" class="line-btn">Read More <i class="fa fa-angle-right"></i></a>
+								<!-- <a href="#0" class="line-btn">Read More <i class="fa fa-angle-right"></i></a> -->
 							</div>
 						</div>
 					</div>
@@ -614,7 +617,7 @@
 		<!-- End To Top button -->
 
 		<!-- Start scroll percentage -->
-		<div id="scroll"></div>
+		<!-- <div id="scroll"></div> -->
 		<!-- End scroll percentage -->
 
 
